kustomize/components/service-mesh-istio-gateways/dev-gateway.yaml
# Dev Environment Istio Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dev-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-dev
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-dev
spec:
  hosts:
  - "*"
  gateways:
  - dev-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 80
